error_permutacion.txt
Tarea_2/EsPermutacion.java:11: error: ')' expected
                (\sum int i; 0 <= i && i < S1.length; S1[i] == z; 1) == (\sum int i; 0 <= i && i < S2.length; S2[i] == z; 1));
                                                                ^
Tarea_2/EsPermutacion.java:11: error: ')' expected
                (\sum int i; 0 <= i && i < S1.length; S1[i] == z; 1) == (\sum int i; 0 <= i && i < S2.length; S2[i] == z; 1));
                                                                                                                        ^
Tarea_2/EsPermutacion.java:11: error: illegal start of type
                (\sum int i; 0 <= i && i < S1.length; S1[i] == z; 1) == (\sum int i; 0 <= i && i < S2.length; S2[i] == z; 1));
                                                                                                                          ^
Tarea_2/EsPermutacion.java:11: error: <identifier> expected
                (\sum int i; 0 <= i && i < S1.length; S1[i] == z; 1) == (\sum int i; 0 <= i && i < S2.length; S2[i] == z; 1));
                                                                                                                           ^
Tarea_2/EsPermutacion.java:11: error: <identifier> expected
                (\sum int i; 0 <= i && i < S1.length; S1[i] == z; 1) == (\sum int i; 0 <= i && i < S2.length; S2[i] == z; 1));
                                                                                                                            ^
Tarea_2/EsPermutacion.java:11: error: <identifier> expected
                (\sum int i; 0 <= i && i < S1.length; S1[i] == z; 1) == (\sum int i; 0 <= i && i < S2.length; S2[i] == z; 1));
                                                                                                                             ^
Tarea_2/EsPermutacion.java:35: error: ')' expected
          @ ensures \result == (\sum int i; 0 <= i && i < S.length; S[i] == E; 1);
                                                                             ^
Tarea_2/EsPermutacion.java:35: error: illegal start of type
          @ ensures \result == (\sum int i; 0 <= i && i < S.length; S[i] == E; 1);
                                                                               ^
Tarea_2/EsPermutacion.java:35: error: <identifier> expected
          @ ensures \result == (\sum int i; 0 <= i && i < S.length; S[i] == E; 1);
                                                                                ^
Tarea_2/EsPermutacion.java:35: error: <identifier> expected
          @ ensures \result == (\sum int i; 0 <= i && i < S.length; S[i] == E; 1);
                                                                                 ^
Tarea_2/EsPermutacion.java:43: error: ')' expected
          @ maintaining r == (\sum int j; 0 <= j && j < i; S[j] == E; 1);
                                                                    ^
Tarea_2/EsPermutacion.java:43: error: not a statement
          @ maintaining r == (\sum int j; 0 <= j && j < i; S[j] == E; 1);
                                                                      ^
Tarea_2/EsPermutacion.java:43: error: ';' expected
          @ maintaining r == (\sum int j; 0 <= j && j < i; S[j] == E; 1);
                                                                       ^
Tarea_2/EsPermutacion.java:42: error: Loop specifications must immediately precede a loop statement
          @ maintaining 0 <= i && i <= S.length;
            ^
14 errors
